# Sophia8

./: .gitignore  CMakeLists.txt  Makefile  README.md  Sophia8_Assembly_UDL.xml  assembler.lex  assembler.yacc  assembly_parser.cpp  assembly_parser.h  basic_all.s8  basic_all.s8.asm  basic_array.s8  basic_array.s8.asm  basic_assign.s8  basic_assign.s8.asm  basic_data.s8  basic_data.s8.asm  basic_data_cmd.s8  basic_data_cmd.s8.asm  basic_errors.s8  basic_errors.s8.asm  basic_expr.s8  basic_expr.s8.asm  basic_flow.s8  basic_flow.s8.asm  basic_helpers.s8  basic_helpers.s8.asm  basic_init.s8  basic_init.s8.asm  basic_io.s8  basic_io.s8.asm  basic_layout.s8.asm  basic_progstore.s8  basic_progstore.s8.asm  basic_repl.s8  basic_repl.s8.asm  basic_rng.s8  basic_rng.s8.asm  basic_state.s8  basic_state.s8.asm  (+92 more)
.github/workflows/: cmake-single-platform.yml
cmake/: RunBasicTest.cmake  RunEquTest.cmake  RunLibsTest.cmake
tests/expected/: basic_auto.txt  basic_high_lines.txt  basic_input.txt  basic_io.txt  basic_loops.txt
tests/inputs/: basic_input.in
tools/: make_text_charset.py
